@@ -461,7 +461,9 @@ repeat for ever, or until you call <function>clutter_timeline_stop()</function>.
 until you call <function>clutter_timeline_start()</function>.
 </para>
 
-<para>Remember to unref the timeline when you are finished with it. Unlike actors, this does not have a &quot;floating reference&quot;.</para> 
+<para>Remember to unref the timeline when you are finished with it. Unlike actors, this does not have a &quot;floating reference&quot;. 
+You may either do this after your mainloop has finished, or when the timeline has finished, by handling the 
+timeline's <literal>completed</literal> signal.</para> 
 
 <para><ulink url="&url_refdocs_base_clutter;Timeline.html">Reference</ulink></para>
 </sect1>
@@ -568,7 +570,10 @@ a value based on the timeline's current frame number and total number of frames,
 end there unless the timeline is set to loop. For instance, an actor will move along a path until it has reached the end, taking 
 as much time as specified by the timeline's number of frames and frames per second.</para> 
 
-<para>Like actors, <classname>ClutterAlpha</classname> has a &quot;floating references&quot; so you don't need to unref it if you have added it to a behaviour.</para> 
+<para>Like actors, <classname>ClutterAlpha</classname> has a &quot;floating references&quot; so you don't need to unref it if you have added it to a behaviour. 
+However, the behaviours do not have a floating reference, so you should unref them when you are finished with them. You might do this at the same time as you 
+unref the timeline, for instance in a signal handler for the timeline's <literal>completed</literal> signal.</para>
+
 <para>The following standard behaviours are available in &clutter;:
 <itemizedlist>
 <listitem><para><ulink url="&url_refdocs_base_clutter;BehaviourBspline.html">ClutterBehaviourBspline</ulink>: Moves the actor along a bezier spline.</para></listitem>
